--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,34 @@
-body {
+body, #root {
   margin: 0;
   padding: 0;
-  height: 100%;
-  background-color: #6E9BC3;
 }
 
 .App {
+  height: 100vh;
+  background-color: #6E9BC3;
+}
 
+.Login {
+  height: 30vh;
+  width: 30vw;
+  padding: 20vh 35vw;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: flex-end;
+}
+
+.Login > p {
+  width: 30vw;
+}
+
+p > input {
+  margin-left: 2vw;
+  width: 20vw;
+}
+
+.Login > button {
+  height: 2vh;
+  width: 8vw;
 }
