--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,23 @@
 body, #root {
   margin: 0;
   padding: 0;
+  font: 1em Georgia, sans-serif;
 }
 
 .App {
   height: 100vh;
   background-color: #6E9BC3;
+}
+
+button {
+  height: 2em;
+  width: 10em;
+  font-size: 2em;
+  color: black;
+}
+
+.Home {
+
 }
 
 .Login {
@@ -28,11 +40,10 @@ p > input {
   width: 20vw;
 }
 
-.Login > button {
-  height: 2vh;
-  width: 8vw;
-}
-
 .Account {
   height: 30vh;
+}
+
+.Search {
+
 }
